Updated api docs.

--- a/api-index.html
+++ b/api-index.html
@@ -83,7 +83,7 @@ Shortcuts:<br />
   <pre>
 <span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/close">close</a><span id="line-content">                        function      irclj.irclj        Closes an IRC connection (including the socket)..
 </span></span><span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/connect">connect</a><span id="line-content">                      function      irclj.irclj        Takes an IRC defrecord and optionally, a sequence ...
-</span></span><span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/create-bot">create-bot</a><span id="line-content">                   function      irclj.irclj        Function to create an IRC(bot). You need to at mos...
+</span></span><span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/create-irc">create-irc</a><span id="line-content">                   function      irclj.irclj        Function to create an IRC(bot). You need to at mos...
 </span></span></pre>
 </div><div id="index-body">
   <h2 id="D"><span id="section-head">D</span></h2>
@@ -105,8 +105,7 @@ Shortcuts:<br />
 </div><div id="index-body">
   <h2 id="H"><span id="section-head">H</span></h2>
   <pre>
-<span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/handle-ctcp">handle-ctcp</a><span id="line-content">                  function      irclj.irclj        Takes a CTCP message and responds to it..
-</span></span></pre>
+</pre>
 </div><div id="index-body">
   <h2 id="I"><span id="section-head">I</span></h2>
   <pre>
@@ -114,7 +113,8 @@ Shortcuts:<br />
 </div><div id="index-body">
   <h2 id="J"><span id="section-head">J</span></h2>
   <pre>
-</pre>
+<span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/join-chan">join-chan</a><span id="line-content">                    function      irclj.irclj        Joins a channel..
+</span></span></pre>
 </div><div id="index-body">
   <h2 id="K"><span id="section-head">K</span></h2>
   <pre>
@@ -139,7 +139,8 @@ Shortcuts:<br />
 </div><div id="index-body">
   <h2 id="P"><span id="section-head">P</span></h2>
   <pre>
-</pre>
+<span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/part-chan">part-chan</a><span id="line-content">                    function      irclj.irclj        Leaves a channel..
+</span></span></pre>
 </div><div id="index-body">
   <h2 id="Q"><span id="section-head">Q</span></h2>
   <pre>
