--- a/api-index.html
+++ b/api-index.html
@@ -100,7 +100,9 @@ Shortcuts:<br />
 </div><div id="index-body">
   <h2 id="G"><span id="section-head">G</span></h2>
   <pre>
-<span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/get-names">get-names</a><span id="line-content">                    function      irclj.irclj        Gets a list of the users in a channel. Includes mo...
+<span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/get-irc-line">get-irc-line</a><span id="line-content">                 function      irclj.irclj        Reads a line from IRC. Returns the string 'Socket ...
+</span></span><span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/get-names">get-names</a><span id="line-content">                    function      irclj.irclj        Gets a list of the users in a channel. Includes mo...
+</span></span><span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/get-topic">get-topic</a><span id="line-content">                    function      irclj.irclj        Gets the topic of a channel..
 </span></span></pre>
 </div><div id="index-body">
   <h2 id="H"><span id="section-head">H</span></h2>
@@ -174,7 +176,8 @@ Shortcuts:<br />
 </div><div id="index-body">
   <h2 id="W"><span id="section-head">W</span></h2>
   <pre>
-</pre>
+<span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/whois">whois</a><span id="line-content">                        function      irclj.irclj        Sends a whois request and returns the contents..
+</span></span></pre>
 </div><div id="index-body">
   <h2 id="X"><span id="section-head">X</span></h2>
   <pre>
