--- a/irclj.irclj-api.html
+++ b/irclj.irclj-api.html
@@ -70,6 +70,8 @@ namespace.
     </div><div style="margin-left: 1em;" class="toc-entry">
       <a href="#irclj.irclj/send-message">send-message</a>
     </div><div style="margin-left: 1em;" class="toc-entry">
+      <a href="#irclj.irclj/send-msg">send-msg</a>
+    </div><div style="margin-left: 1em;" class="toc-entry">
       <a href="#irclj.irclj/send-notice">send-notice</a>
     </div><div style="margin-left: 1em;" class="toc-entry">
       <a href="#irclj.irclj/set-mode">set-mode</a>
@@ -143,7 +145,8 @@ irclj, irclj, teh bawt, and 6667 respectively.</pre>
   <span id="var-type">function</span><br />
   <pre id="var-usage">Usage: (get-names irc channel)
 </pre>
-  <pre id="var-docstr">Gets a list of the users in a channel. Includes modes.</pre>
+  <pre id="var-docstr">Gets a list of the users in a channel. Includes modes. Returns nil if the channel
+doesn't exist.</pre>
   
 </div><div id="var-entry">
   <br />
@@ -152,7 +155,8 @@ irclj, irclj, teh bawt, and 6667 respectively.</pre>
   <span id="var-type">function</span><br />
   <pre id="var-usage">Usage: (get-topic irc channel)
 </pre>
-  <pre id="var-docstr">Gets the topic of a channel.</pre>
+  <pre id="var-docstr">Gets the topic of a channel. Returns a map of :topic, :set-by, and :date
+(haven't quite worked date out yet). If the channel doesn't exist, returns nil.</pre>
   
 </div><div id="var-entry">
   <br />
@@ -188,7 +192,7 @@ irclj, irclj, teh bawt, and 6667 respectively.</pre>
   <span id="var-type">function</span><br />
   <pre id="var-usage">Usage: (send-action irc target message)
 </pre>
-  <pre id="var-docstr">Sends a CTCP ACTION to a target</pre>
+  <pre id="var-docstr">Sends a CTCP ACTION to a target (user, channel)</pre>
   
 </div><div id="var-entry">
   <br />
@@ -198,7 +202,23 @@ irclj, irclj, teh bawt, and 6667 respectively.</pre>
   <pre id="var-usage">Usage: (send-message irc target message)
 </pre>
   <pre id="var-docstr">Takes an IRC, a message and a target to send it to, and sends an IRC message to
-target.</pre>
+target (user, channel).</pre>
+  
+</div><div id="var-entry">
+  <br />
+  <hr />
+  <h2 id="irclj.irclj/send-msg">send-msg</h2>
+  <span id="var-type">function</span><br />
+  <pre id="var-usage">Usage: (send-msg type irc target message)
+</pre>
+  <pre id="var-docstr">Takes a 'type' of message to send, such as PRIVMSG, the IRC record you want to use,
+a target (user, channel, et al) to send it to, and a message. In trying to be general
+enough to be used by the other IRC functions to send different IRC requests, this function
+will not insert a : before the message you send, so if you're sending something that
+requires that, remember to put : before it. Also, this function should only be used
+to handle stuff that isn't already handled by other functions. This is a utility
+function. If you want to send a message or a notice or something, use send-message
+and friends. Don't use this unless what you're trying to do isn't already done.</pre>
   
 </div><div id="var-entry">
   <br />
@@ -207,7 +227,8 @@ target.</pre>
   <span id="var-type">function</span><br />
   <pre id="var-usage">Usage: (send-notice irc target message)
 </pre>
-  <pre id="var-docstr">Takes an IRC, a message, and a target to send to, and sends a NOTICE to target</pre>
+  <pre id="var-docstr">Takes an IRC, a message, and a target to send to, and sends a NOTICE to target
+(user, channel).</pre>
   
 </div><div id="var-entry">
   <br />
@@ -225,7 +246,7 @@ target.</pre>
   <span id="var-type">function</span><br />
   <pre id="var-usage">Usage: (set-nick irc nick)
 </pre>
-  <pre id="var-docstr">Changes the connectors nick.</pre>
+  <pre id="var-docstr">Changes your nick.</pre>
   
 </div><div id="var-entry">
   <br />
@@ -243,7 +264,9 @@ target.</pre>
   <span id="var-type">function</span><br />
   <pre id="var-usage">Usage: (whois irc nick)
 </pre>
-  <pre id="var-docstr">Sends a whois request and returns the contents.</pre>
+  <pre id="var-docstr">Sends a whois request and returns a map with the contents mapped to keys.
+Keys are: :loggedinas, :user, :channels, and :server. Returns nil if user
+doesn't exist.</pre>
   
 </div>
 
