* api-index.html: Updated API docs.

--- a/api-index.html
+++ b/api-index.html
@@ -100,8 +100,7 @@ Shortcuts:<br />
 </div><div id="index-body">
   <h2 id="G"><span id="section-head">G</span></h2>
   <pre>
-<span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/get-irc-line">get-irc-line</a><span id="line-content">                 function      irclj.irclj        Reads a line from IRC. Returns the string 'Socket ...
-</span></span><span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/get-names">get-names</a><span id="line-content">                    function      irclj.irclj        Gets a list of the users in a channel. Includes mo...
+<span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/get-names">get-names</a><span id="line-content">                    function      irclj.irclj        Gets a list of the users in a channel. Includes mo...
 </span></span><span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/get-topic">get-topic</a><span id="line-content">                    function      irclj.irclj        Gets the topic of a channel. Returns a map of :top...
 </span></span></pre>
 </div><div id="index-body">
@@ -111,7 +110,8 @@ Shortcuts:<br />
 </div><div id="index-body">
   <h2 id="I"><span id="section-head">I</span></h2>
   <pre>
-</pre>
+<span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/identify">identify</a><span id="line-content">                     function      irclj.irclj        Indentifies with the network..
+</span></span></pre>
 </div><div id="index-body">
   <h2 id="J"><span id="section-head">J</span></h2>
   <pre>
@@ -142,6 +142,7 @@ Shortcuts:<br />
   <h2 id="P"><span id="section-head">P</span></h2>
   <pre>
 <span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/part-chan">part-chan</a><span id="line-content">                    function      irclj.irclj        Leaves a channel..
+</span></span><span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/print-irc-line">print-irc-line</a><span id="line-content">               function      irclj.irclj        Prints a line of text to an IRC connection..
 </span></span></pre>
 </div><div id="index-body">
   <h2 id="Q"><span id="section-head">Q</span></h2>
@@ -150,14 +151,16 @@ Shortcuts:<br />
 </div><div id="index-body">
   <h2 id="R"><span id="section-head">R</span></h2>
   <pre>
-</pre>
+<span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/read-irc-line">read-irc-line</a><span id="line-content">                function      irclj.irclj        Reads a line from IRC. Returns the string 'Socket ...
+</span></span></pre>
 </div><div id="index-body">
   <h2 id="S"><span id="section-head">S</span></h2>
   <pre>
 <span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/send-action">send-action</a><span id="line-content">                  function      irclj.irclj        Sends a CTCP ACTION to a target (user, channel).
 </span></span><span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/send-message">send-message</a><span id="line-content">                 function      irclj.irclj        Takes an IRC, a message and a target to send it to...
-</span></span><span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/send-msg">send-msg</a><span id="line-content">                     function      irclj.irclj        Takes a 'type' of message to send, such as PRIVMSG...
+</span></span><span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/send-msg">send-msg</a><span id="line-content">                     function      irclj.irclj        Utility function for sending raw messages. Don't u...
 </span></span><span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/send-notice">send-notice</a><span id="line-content">                  function      irclj.irclj        Takes an IRC, a message, and a target to send to, ...
+</span></span><span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/send-raw-message">send-raw-message</a><span id="line-content">             function      irclj.irclj        Takes an IRC, a message and a target to send it to...
 </span></span><span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/set-mode">set-mode</a><span id="line-content">                     function      irclj.irclj        Set modes..
 </span></span><span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/set-nick">set-nick</a><span id="line-content">                     function      irclj.irclj        Changes your nick..
 </span></span><span id="section-content"> <a href="irclj.irclj-api.html#irclj.irclj/set-topic">set-topic</a><span id="line-content">                    function      irclj.irclj        Sets the topic for a channel..
